# pulse

./: .env.example  .gitignore  CAHIER-DES-CHARGES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
pulse/: __init__.py  alerts.py  cli.py  config.py  db.py  deps.py  digest.py  feeds.py  main.py  models.py  opml.py  scheduler.py  security.py  seed.py  templating.py
pulse/routes/: __init__.py  alerts.py  articles.py  auth.py  categories.py  digest.py  rules.py  sources.py
pulse/static/: style.css
pulse/templates/: alerts.html  article_detail.html  articles.html  base.html  categories.html  digest.html  login.html  not_found.html  register.html  rules.html  sources.html
pulse/templates/partials/: article_card.html  article_list.html
tests/: conftest.py  test_alerts.py  test_digest.py  test_feeds.py  test_opml.py  test_web.py
