[project]
name = "pulse"
version = "0.1.0"
description = "Outil de veille informationnelle self-hosted pour les équipes IT"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1",
    "pydantic-settings>=2.4",
    "email-validator>=2.2",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pulse = "pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulse"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
